resources/js/components/Header/style.scss
/* ... */
/**
 * if mobile devices (<=768)
 */
@media screen and (max-width: 768px) {
    $header_height: 44px;

    div.fixed-wrapper {
        position: relative;
        height: $header_height;
    }

    // header
    nav.header.border {
        height: $header_height;
        border: 1px solid rgba(var(--ca6,219,219,219),1);
        position: fixed;

        .header-title {
            width: 70%;
            height: $header_height;
            padding: 0;
            margin: 7px auto;
            text-align: center;
            font-size: 19.3px;
            font-weight: bold;
            justify-content: center;
        }

        h1.bg-logo {
            margin-top: 0 !important;
            background: $photapp_logo;
            background-size: 110px;
            background-repeat: no-repeat;
        }

        .photo-btn {
            width: 15%;
            float: left;
            height: $header_height;
            margin: 0 auto;

            img {
                border: none;
                width: 30px;
                height: 30px;

                &#go_back {
                    cursor: pointer;
                }
            }
        }
    }


    // footer
    footer.border.footer {
        $footer_height: 44px;
        border: 1px solid rgba(var(--ca6,219,219,219),1);

        z-index: 999;
        background: #fff;
        position: fixed;
        bottom: 0;
        display: block;
        width: 100%;
        height: $footer_height;
        border-width: 0.5px;

        .btn {
            height: $footer_height;
        }

        .row.btns {
            position: relative;
            height: $footer_height;

            & #curr-true {
                border-top: 3px solid;
            }

            .col {
                padding: 0;
            }

            img {
                width: 30px;
                height: 30px;
                border: none;
                margin: 5px auto;

                &.avatar {
                    @include border-radius(100%);
                }
            }
        }
    }
}


/**
 * devices w/ width (>=769) 
 */
@media screen and (min-width: 769px) {
    nav.header.border {
        height: 54px;
        position: fixed;
        border: 1px solid rgba(var(--ca6,219,219,219),1);

        .header-wrapper {
            width: 100%;
            max-width: 975px;
            margin: 0 auto;

            a {
                border-bottom: none;
            }

            .col {
                padding: 0;
            }

            .header-brand {
                h1.bg-logo {
                    width: 175px;
                    height: 40px;
                    margin: 0;
                    padding: 0;
                    background: $photapp_logo;
                    background-size: 120px;
                    background-repeat: no-repeat;
                }
            }

            .search-bar {
                padding-top: 4px;

                div.search-input-wrap {
                    width: 215px;
                    height: 28px;
                }

                input[type=search] {
                    padding: 7px;
                    text-align: center;
                    border-radius: 3px;
                    width: 215px;
                    height: 28px;
                    font-size: 15px;
                    background: #fafafa;
                    border: solid 1px rgba(var(--b6a,219,219,219),1);
                }
            }

            .nav-links {
                ul {
                    margin-top: 0;
                    float: right;
                    li img {
                        border: none;
                        width: 36px;
                        height: 36px;

                        &.avatar {
                            @include border-radius(100%);
                        }
                    }
                }
            }
        }


        // nav dropdown
        .dropdown {
            position: relative;

            /* Dropdown Button */
            .dropbtn {
                cursor: pointer;
            }

            .dropdown-content {
                display: none;
                position: absolute;
                right: -50px;
                top: 40px;
                background-color: #FFF;
                width: 200px;
                box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);

                &.show {
                    display: block;
                }

                /* Change color of dropdown links on hover */
                a:hover {background-color: #f1f1f1}

                a {
                    color: #444341;
                    display: block;
                    font-size: 18.3px;
                    padding: 10px 10px;
                    text-align: left !important;
                    padding-left: 20px;

                    &:nth-child(4) {
                        border-top: 1px solid #ccc;
                    }
                }

            }
        }


        div.floating-btn.add {
            position: fixed;
            bottom: 50px;
            right: 50px;

            img {
                cursor: pointer;
                border: none;
            }
        }
    }
}



@media screen and (max-width: 814px) {
    .hide-width-814 {
        display: none;
    }
}

